<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:minWidth="280dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/rateIt"
        android:textColor="#333333"
        android:textSize="22sp" />
    
    <ImageView
        android:id="@+id/imageHSeparator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"        
        android:background="#329FF3" />

    <RatingBar
        android:id="@+id/rbRating"
        style="@style/custom_rating_bar_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/lblRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/unRated" />

<EditText
    android:id="@+id/txtTitleComment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:focusable="true"
    android:gravity="top"
    android:hint="@string/title" />
    
    <ImageView
        android:id="@+id/imageHSeparator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#329FF3" />
    <EditText
        android:id="@+id/txtComment"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="top"
        android:hint="@string/review" />
    
    <ImageView
        android:id="@+id/imageHSeparator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#329FF3" />
   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#ffffff">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="#ffffff"
            android:text="@string/cancel" />

      <ImageView
          android:id="@+id/imageStroke"
          android:layout_width="2dp"
          android:layout_height="35dp"
          android:layout_gravity="center_vertical"
          android:background="#329FF3" />

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:background="#ffffff"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>