<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_comming_soon" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <com.mapplas.utils.visual.custom_views.RobotoTextView
            android:id="@+id/comming_soon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="40sp"
            android:text="@string/comming_soon_title"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <com.mapplas.utils.visual.custom_views.RobotoTextView
            android:id="@+id/comming_soon_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="30sp"
            android:text="@string/comming_soon_subtitle"
            android:textColor="@color/comming_soon_subtitle"
            android:textSize="14sp" />

        <com.mapplas.utils.visual.custom_views.RobotoTextView
            android:id="@+id/comming_soon_pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/comming_soon_pull"
            android:textColor="@color/comming_soon_pull"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>