<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="78dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/text_input"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textSize="14dp"
            android:typeface="normal" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/text_input"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textSize="14dp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn_send"
        android:text="@string/ok"
        android:textColor="#ffffff"
        android:typeface="monospace" />

</LinearLayout>