<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="5dp"
    android:background="#f7f8f8"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lytAction"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f7f8f8"
        android:baselineAligned="true" >

        <LinearLayout
            android:id="@+id/lytPinups"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnPinUp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/ic_action_unpinup" />

            <TextView
                android:id="@+id/lblPinUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/user_screen_segmented_control_pins"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lytBlocks"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnBlock"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/ic_action_block" />

            <TextView
                android:id="@+id/lblBlock"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/user_screen_segmented_control_blocks"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytRates"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/btnRate"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/action_rate_button" />

            <TextView
                android:id="@+id/lblRate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/rate"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>