<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llInnerPtr"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:background="@drawable/bgd_ptr"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_refresh_photo" />

        <TextView
            android:id="@+id/lblAction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/ptr_pull_to_refresh"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lblWifiDisabledMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblAction"
            android:layout_marginTop="10sp"
            android:text="@string/pull_to_refresh_wifi_error"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytStatus"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/bgd_ptr"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imgMap"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/anim_location" />

        <TextView
            android:id="@+id/lblStatus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:text="@string/location_searching"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>